# data-hub

./: .gitignore  Dockerfile  README.md  asgi.py  data-hub.sublime-project  data-hub.sublime-workspace  db.sqlite3  pyproject.toml  settings.py  settings.py.old  start-server.sh  urls.py  wsgi.py
.github/workflows/: container.yml  django.yml
datahub/: settings.py  urls.py  website.py
datahub/pipeline/: __init__.py  apps.py  flows.py  urls.py
datahub/pipeline/migrations/: 0001_initial.py  0002_delete_helloworldprocess_helloworldprocess.py
datahub/templates/: index.html
datahub/templates/datahub/: index.html
pipeline/migrations/: 0001_initial.py
templates/material/frontend/: base_site.html
tests/: settings.py  test_compat.py
